--- a/main.css
+++ b/main.css
@@ -3,19 +3,16 @@
   padding: 0;
 }
 
-body {
+.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   height: 100vh;
   width: 100vw;
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+  background-image: url(./krecik.jpg);
+  background-size: cover;
+  overflow: hidden;
 }
 .main .welcome h1 {
   margin-top: 10%;
@@ -44,4 +41,92 @@ body {
 .main .welcome__level1:hover, .main .welcome__level2:hover, .main .welcome__level3:hover {
   background-color: lightgrey;
   cursor: pointer;
+}
+
+.gameSection {
+  margin-top: 5%;
+  width: 406px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  background-color: green;
+  overflow: hidden;
+  opacity: 0.91;
+  border-radius: 10px;
+}
+.gameSection__score {
+  color: azure;
+  font-size: 2em;
+  margin: 30px;
+  text-align: center;
+}
+.gameSection__playGround {
+  margin: auto;
+  height: 400px;
+  width: 400px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+}
+#gameSection__startButton {
+  padding: 5px;
+  border: 0.5px solid red;
+  border-radius: 5px;
+  width: 100px;
+  margin: auto;
+  margin-bottom: 10px;
+  opacity: 0.8;
+  cursor: pointer;
+}
+#gameSection__startButton:hover {
+  opacity: 1;
+}
+
+#malet {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  background-image: url("./cursor.cur");
+  background-size: 100%, 100%;
+  transition: 0.2ms;
+  pointer-events: none;
+}
+
+.active {
+  transform: translate(-50%, -50%) rotate(-120deg);
+}
+
+.gameSection__molehill {
+  position: relative;
+}
+
+.gameSection__playGroundSection {
+  background-image: url("./rsz_mole2.png");
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.mole {
+  height: 70px;
+}
+
+.gameSection__playGroundSection .mole {
+  width: 70%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 20%;
+  animation: rise 0.1s ease-out;
+}
+
+@keyframes rise {
+  0% {
+    transform: translateX(0px) translateY(25px);
+  }
+  2% {
+    transform: translateX(-50%) translateY(25%);
+  }
 }
