--- a/main.css
+++ b/main.css
@@ -6,7 +6,6 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   height: 100vh;
   width: 100vw;
@@ -69,7 +68,8 @@
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
 }
-#gameSection__startButton {
+#gameSection__startButton,
+#gameSection__resetButton {
   padding: 5px;
   border: 0.5px solid red;
   border-radius: 5px;
@@ -79,8 +79,13 @@
   opacity: 0.8;
   cursor: pointer;
 }
-#gameSection__startButton:hover {
+#gameSection__startButton:hover,
+#gameSection__resetButton:hover {
   opacity: 1;
+}
+
+.buttons {
+  margin-top: 2%;
 }
 
 #malet {
@@ -91,12 +96,13 @@
   left: 100px;
   background-image: url("./cursor.cur");
   background-size: 100%, 100%;
+  transform: translate(-50%, -50%);
   transition: 0.2ms;
   pointer-events: none;
 }
 
 .active {
-  transform: translate(-50%, -50%) rotate(-120deg);
+  transform: rotate(-120deg);
 }
 
 .gameSection__molehill {
