--- a/main.scss
+++ b/main.scss
@@ -8,7 +8,7 @@
 .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+
     align-items: center;
     height: 100vh;
     width: 100vw;
@@ -99,7 +99,8 @@
 
 }
 
-#gameSection__startButton {
+#gameSection__startButton,
+#gameSection__resetButton {
     padding: 5px;
     border: 0.5px solid red;
     border-radius: 5px;
@@ -112,6 +113,10 @@
     &:hover {
         opacity: 1;
     }
+}
+
+.buttons {
+    margin-top: 2%;
 }
 
 
@@ -128,14 +133,14 @@
     left: 100px;
     background-image: url('./cursor.cur');
     background-size: 100%, 100%;
-    // transform: translate(-50%, -50%) rotate(-90deg);
+    transform: translate(-50%, -50%);
     transition: 0.2ms;
     pointer-events: none;
 
 }
 
 .active {
-    transform: translate(-50%, -50%) rotate(-120deg);
+    transform: rotate(-120deg);
 }
 
 .gameSection__molehill {
