--- a/main.scss
+++ b/main.scss
@@ -91,13 +91,12 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 20px;
-
-        &__playGroundSection {}
-
+        cursor: none;
 
     }
 
 }
+
 
 #gameSection__startButton,
 #gameSection__resetButton {
@@ -125,7 +124,7 @@
 //     cursor: url("./mallet1.png");
 // }
 
-#malet {
+.malet {
     width: 60px;
     height: 60px;
     position: absolute;
@@ -133,7 +132,7 @@
     left: 100px;
     background-image: url('./cursor.png');
     background-size: 100%, 100%;
-    // transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     transition: 0.2ms;
     pointer-events: none;
 
