welcome page added

--- a/main.css
+++ b/main.css
@@ -9,16 +9,25 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background-image: url(./krecik.jpg);
+  background-color: wheat;
+  background-image: url(./mole.png);
   background-size: cover;
   overflow: hidden;
 }
+.main .welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: contents;
+}
 .main .welcome h1 {
-  margin-top: 10%;
-  color: orange;
+  text-align: center;
+  color: burlywood;
   font-size: 6em;
 }
 .main .welcome h3 {
+  text-align: center;
   color: black;
   font-size: 3em;
 }
@@ -27,7 +36,19 @@
   align-items: center;
   justify-content: center;
 }
-.main .welcome__level1, .main .welcome__level2, .main .welcome__level3 {
+.main .welcome__container {
+  display: block;
+  margin-top: 10%;
+  width: 400px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgrey;
+  opacity: 0.95;
+}
+.main .welcome__level {
   margin: 20px 10px;
   width: 100px;
   padding: 10px;
@@ -37,7 +58,7 @@
   justify-content: space-around;
   font-weight: bold;
 }
-.main .welcome__level1:hover, .main .welcome__level2:hover, .main .welcome__level3:hover {
+.main .welcome__level:hover {
   background-color: lightgrey;
   cursor: pointer;
 }
@@ -48,10 +69,11 @@
   height: 450px;
   display: flex;
   flex-direction: column;
-  background-color: green;
+  background-color: lightsalmon;
   overflow: hidden;
   opacity: 0.91;
   border-radius: 10px;
+  display: none;
 }
 .gameSection__score {
   color: azure;
@@ -67,11 +89,11 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
-  cursor: none;
 }
 
 #gameSection__startButton,
-#gameSection__resetButton {
+#gameSection__resetButton,
+#gameSection__mainButton {
   padding: 5px;
   border: 0.5px solid red;
   border-radius: 5px;
@@ -82,12 +104,17 @@
   cursor: pointer;
 }
 #gameSection__startButton:hover,
-#gameSection__resetButton:hover {
+#gameSection__resetButton:hover,
+#gameSection__mainButton:hover {
   opacity: 1;
 }
 
 .buttons {
   margin-top: 2%;
+}
+
+.gameSection > .buttons {
+  display: none;
 }
 
 .malet {
@@ -100,7 +127,6 @@
   background-size: 100%, 100%;
   transform: translate(-50%, -50%);
   transition: 0.2ms;
-  pointer-events: none;
 }
 
 .active {
@@ -126,7 +152,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 20%;
+  bottom: 38%;
   animation: rise 0.1s ease-out;
 }
 
