--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@
 .gameSection {
   margin-top: 5%;
   width: 406px;
-  height: 450px;
+  height: 480px;
   display: flex;
   flex-direction: column;
   background-color: lightsalmon;
@@ -75,10 +75,14 @@
   border-radius: 10px;
   display: none;
 }
+.gameSection__timer {
+  margin: 10px;
+  font-size: 20px;
+}
 .gameSection__score {
   color: azure;
   font-size: 2em;
-  margin: 30px;
+  margin: 20px;
   text-align: center;
 }
 .gameSection__playGround {
@@ -163,4 +167,34 @@
   2% {
     transform: translateX(-50%) translateY(25%);
   }
+}
+.gameoverSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  visibility: hidden;
+  background-color: rgba(207, 96, 96, 0.952);
+  font-size: 30px;
+  color: #fbff00;
+  font-family: Arial, Helvetica, sans-serif;
+  z-index: 99;
+}
+.gameoverSection__yourScore {
+  padding-top: 1%;
+}
+.gameoverSection__score {
+  font-size: 50px;
+}
+.gameoverSection__retry-button {
+  margin-top: 25px;
+  padding: 10px;
+  color: #fbff00;
+  background-color: #e7853e;
+  border: 1px solid yellow;
+  border-radius: 10px;
+  font-size: 22px;
 }
