--- a/main.scss
+++ b/main.scss
@@ -87,7 +87,7 @@
 .gameSection {
     margin-top: 5%;
     width: 406px;
-    height: 450px;
+    height: 480px;
     display: flex;
     flex-direction: column;
     background-color: lightsalmon;
@@ -96,12 +96,17 @@
     border-radius: 10px;
     display: none;
 
+    &__timer {
+        margin: 10px;
+        font-size: 20px;
+    }
+
 
 
     &__score {
         color: azure;
         font-size: 2em;
-        margin: 30px;
+        margin: 20px;
         text-align: center;
 
     }
@@ -214,4 +219,41 @@
     2% {
         transform: translateX(-50%) translateY(25%);
     }
+}
+
+.gameoverSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    visibility: hidden;
+    background-color: rgba(207, 96, 96, 0.952);
+    font-size: 30px;
+    color: rgb(251, 255, 0);
+    font-family: Arial, Helvetica, sans-serif;
+    z-index: 99;
+
+    &__yourScore {
+        padding-top: 1%;
+    }
+
+    &__score {
+        font-size: 50px;
+    }
+
+    &__retry-button {
+        margin-top: 25px;
+        padding: 10px;
+
+        color: rgb(251, 255, 0);
+        background-color: rgb(231, 133, 62);
+        border: 1px solid yellow;
+        border-radius: 10px;
+        font-size: 22px;
+
+    }
+
 }
