--- a/main.scss
+++ b/main.scss
@@ -13,7 +13,7 @@
     width: 100vw;
     background-color: wheat;
     // text-align: center;
-    background-image: url(./mole.png);
+    // background-image: url(./mole.png);
     background-size: cover;
     overflow: hidden;
 
@@ -234,7 +234,7 @@
     font-size: 30px;
     color: rgb(251, 255, 0);
     font-family: Arial, Helvetica, sans-serif;
-    z-index: 99;
+
 
     &__yourScore {
         padding-top: 1%;
