--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
@@ -12,14 +13,8 @@
     height: 100vh;
     width: 100vw;
     background-color: wheat;
-    // text-align: center;
-    // background-image: url(./mole.png);
     background-size: cover;
     overflow: hidden;
-
-
-
-
 
 
     .welcome {
@@ -35,13 +30,13 @@
         h1 {
             text-align: center;
             color: burlywood;
-            font-size: 6em;
+            font-size: 5em;
         }
 
         h3 {
             text-align: center;
             color: black;
-            font-size: 3em;
+            font-size: 2em;
         }
 
         &__buttons {
@@ -53,8 +48,8 @@
 
         &__container {
             display: block;
-            margin-top: 10%;
-            width: 400px;
+            margin-top: 3%;
+            width: 450px;
             border-radius: 20px;
             display: flex;
             flex-direction: column;
@@ -119,7 +114,7 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 20px;
-        // cursor: none;
+
 
     }
 
@@ -157,36 +152,13 @@
 }
 
 
-// // don work ??????whyhhhththth
-// .gameSection__playGround:hover {
-//     cursor: url("./mallet1.png");
-// }
 
-.malet {
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    top: 50px;
-    left: 100px;
-    background-image: url('./cursor.png');
-    background-size: 100%, 100%;
-    transform: translate(-50%, -50%);
-    transition: 0.2ms;
-    // pointer-events: none;
 
-}
-
-.active {
-    transform: translate(-50%, -50%) rotate(-120deg);
-}
 
 .gameSection__molehill {
     position: relative;
 }
 
-// .mole {
-//     position: absolute;
-// }
 
 .gameSection__playGroundSection {
 
@@ -247,13 +219,29 @@
     &__retry-button {
         margin-top: 25px;
         padding: 10px;
-
-        color: rgb(251, 255, 0);
+        color: goldenrod;
         background-color: rgb(231, 133, 62);
-        border: 1px solid yellow;
+        border: 1px solid red;
         border-radius: 10px;
-        font-size: 22px;
+        font-size: 25px;
+        cursor: pointer;
 
     }
 
+}
+
+@media only screen and (max-width: 410px) {
+    .gameSection {
+        margin-top: 2%;
+        width: 360px;
+        height: 480px;
+
+
+        &__playGround {
+            margin: auto;
+            height: 350px;
+            width: 350px;
+            gap: 1px;
+        }
+    }
 }
