--- a/main.scss
+++ b/main.scss
@@ -76,13 +76,15 @@
 
             }
         }
+
+
     }
 }
 
 .gameSection {
     margin-top: 5%;
     width: 406px;
-    height: 480px;
+    height: 550px;
     display: flex;
     flex-direction: column;
     background-color: lightsalmon;
@@ -90,6 +92,7 @@
     opacity: 0.91;
     border-radius: 10px;
     display: none;
+    justify-content: center;
 
     &__timer {
         margin: 10px;
@@ -114,8 +117,15 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 20px;
+        margin-bottom: 1px;
 
+    }
 
+    .buttons {
+        margin-top: 1px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
     }
 
 }
@@ -128,8 +138,7 @@
     border: 0.5px solid red;
     border-radius: 5px;
     width: 100px;
-    margin: auto;
-    margin-bottom: 10px; // background-color: bisque;
+
     opacity: 0.8;
     cursor: pointer;
 
@@ -144,15 +153,6 @@
     margin-top: 2%;
 
 }
-
-.gameSection>.buttons {
-
-    display: none;
-
-}
-
-
-
 
 
 .gameSection__molehill {
@@ -219,7 +219,7 @@
     &__retry-button {
         margin-top: 25px;
         padding: 10px;
-        color: goldenrod;
+        color: red;
         background-color: rgb(231, 133, 62);
         border: 1px solid red;
         border-radius: 10px;
@@ -230,11 +230,11 @@
 
 }
 
-@media only screen and (max-width: 410px) {
+@media only screen and (max-width: 415px) {
     .gameSection {
         margin-top: 2%;
         width: 360px;
-        height: 480px;
+        height: 500px;
 
 
         &__playGround {
@@ -244,4 +244,14 @@
             gap: 1px;
         }
     }
+}
+
+.welcome__container {
+    width: 360px;
+
+
+}
+
+.welcome__mole {
+    width: 360px;
 }
