update of css and rewad me

--- a/main.css
+++ b/main.css
@@ -178,7 +178,7 @@
   margin-top: 25px;
   padding: 10px;
   color: red;
-  background-color: #e7853e;
+  background-color: lightcyan;
   border: 1px solid red;
   border-radius: 10px;
   font-size: 25px;
