--- a/main.scss
+++ b/main.scss
@@ -25,8 +25,6 @@
         align-items: center;
         display: contents;
 
-
-
         h1 {
             text-align: center;
             color: burlywood;
@@ -43,7 +41,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-
         }
 
         &__container {
@@ -57,7 +54,6 @@
             justify-content: center;
             background-color: lightgrey;
             opacity: 0.95;
-
         }
 
         &__level {
@@ -73,11 +69,8 @@
             &:hover {
                 background-color: lightgrey;
                 cursor: pointer;
-
             }
         }
-
-
     }
 }
 
@@ -99,14 +92,11 @@
         font-size: 20px;
     }
 
-
-
     &__score {
         color: azure;
         font-size: 2em;
         margin: 20px;
         text-align: center;
-
     }
 
     &__playGround {
@@ -118,7 +108,6 @@
         grid-template-rows: repeat(3, 1fr);
         gap: 20px;
         margin-bottom: 1px;
-
     }
 
     .buttons {
@@ -138,10 +127,8 @@
     border: 0.5px solid red;
     border-radius: 5px;
     width: 100px;
-
     opacity: 0.8;
     cursor: pointer;
-
 
 
     &:hover {
@@ -154,23 +141,19 @@
 
 }
 
-
 .gameSection__molehill {
     position: relative;
 }
-
 
 .gameSection__playGroundSection {
 
     background-image: url("./rsz_mole2.png");
     background-repeat: no-repeat;
     position: relative;
-
 }
 
 .mole {
     height: 70px;
-
 }
 
 .gameSection__playGroundSection .mole {
@@ -180,7 +163,6 @@
     transform: translateX(-50%);
     bottom: 38%;
     animation: rise .1s ease-out;
-
 }
 
 @keyframes rise {
@@ -220,7 +202,7 @@
         margin-top: 25px;
         padding: 10px;
         color: red;
-        background-color: rgb(231, 133, 62);
+        background-color: lightcyan;
         border: 1px solid red;
         border-radius: 10px;
         font-size: 25px;
