--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@
 }
 
 .gameSection__playGroundSection {
-  background-image: url("./rsz_mole2.png");
+  background-image: url("./pictures/rsz_mole2.png");
   background-repeat: no-repeat;
   position: relative;
 }
