--- a/main.scss
+++ b/main.scss
@@ -87,6 +87,7 @@
     display: none;
     justify-content: center;
 
+
     &__timer {
         margin: 10px;
         font-size: 20px;
@@ -150,10 +151,13 @@
     background-image: url("./pictures/rsz_mole2.png");
     background-repeat: no-repeat;
     position: relative;
+
+
 }
 
 .mole {
     height: 70px;
+
 }
 
 .gameSection__playGroundSection .mole {
@@ -162,16 +166,18 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: 38%;
-    animation: rise .1s ease-out;
+    animation: fadeUp 0.1s ease-out;
+
+
 }
 
-@keyframes rise {
+@keyframes fadeUp {
     0% {
-        transform: translateX(0px) translateY(25px);
+        transform: translateX(-50%) translateY(20%);
     }
 
-    2% {
-        transform: translateX(-50%) translateY(25%);
+    100% {
+        transform: translateX(-50%) translateY(0);
     }
 }
 
@@ -208,6 +214,10 @@
         font-size: 25px;
         font-weight: bold;
         cursor: pointer;
+
+        &:hover {
+            opacity: 0.8;
+        }
 
     }
 
