--- a/main.css
+++ b/main.css
@@ -62,8 +62,7 @@
   background-color: lightgrey;
   cursor: pointer;
 }
-
-.gameSection {
+.main .gameSection {
   margin-top: 5%;
   width: 406px;
   height: 550px;
@@ -76,17 +75,22 @@
   display: none;
   justify-content: center;
 }
-.gameSection__timer {
+.main .gameSection__timer {
   margin: 10px;
   font-size: 20px;
 }
-.gameSection__score {
+.main .gameSection__score {
   color: azure;
   font-size: 2em;
   margin: 20px;
   text-align: center;
 }
-.gameSection__playGround {
+.main .gameSection__playGroundGrid {
+  background-image: url("./pictures/rsz_mole2.png");
+  background-repeat: no-repeat;
+  position: relative;
+}
+.main .gameSection__playGround {
   margin: auto;
   height: 400px;
   width: 400px;
@@ -96,7 +100,7 @@
   gap: 20px;
   margin-bottom: 1px;
 }
-.gameSection .buttons {
+.main .gameSection .buttons {
   margin-top: 1px;
   display: flex;
   align-items: center;
@@ -119,17 +123,7 @@
   opacity: 1;
 }
 
-.buttons {
-  margin-top: 2%;
-}
-
 .gameSection__molehill {
-  position: relative;
-}
-
-.gameSection__playGroundGrid {
-  background-image: url("./pictures/rsz_mole2.png");
-  background-repeat: no-repeat;
   position: relative;
 }
 
@@ -189,10 +183,6 @@
   opacity: 0.8;
 }
 
-.welcome__container {
-  width: 360px;
-}
-
 .welcome__mole {
   width: 360px;
 }
@@ -208,5 +198,13 @@
     height: 350px;
     width: 350px;
     gap: 1px;
+  }
+
+  .welcome__container {
+    max-width: 100%;
+  }
+
+  .main .welcome h1 {
+    font-size: 4em;
   }
 }
